# TDT-RM

./: .gitignore  README.md  TDT-RM-V5.1.3-Rev3-Final-Freeze.md  TDT-RM-V5.1.4-Backtest-Calibration-Patch.md  backtest_2022_report.md  covid_stress_test_report.md  performance_report.html  performance_report.md  pyproject.toml  tdt_rm.py
config/: breadth_representative_universe.json  main7_symbols.json  public_data_sources.json
docs/: CODEX_NETWORK_LIMITATION.md  DAILY_DATA_IMPORT_WORKFLOW.md  DAILY_PIPELINE_GUIDE.md  DAILY_PRODUCTION_RUNBOOK.md  DAILY_PROVIDER_GUIDE.md  DATA_SOURCE_MAPPING.md  GITHUB_ACTIONS_CONNECTIVITY_REPORT.md  GITHUB_ACTIONS_PRODUCTION_PIPELINE.md  PRODUCTION_CSV_IMPLEMENTATION_PLAN.md  PRODUCTION_DATA_PROVIDERS.md  PRODUCTION_DATA_PROVIDER_RECOVERY_REPORT.md  PRODUCTION_FETCH_VALIDATION_REPORT_2026-06-04.md  PRODUCTION_GAP_REPORT.md  PUBLIC_DATA_FETCHER_GUIDE.md  TDT_RM_ARCHITECTURE.md  TDT_RM_ROADMAP.md
examples/: sample_input.csv
outputs/: covid_2020_backtest.csv  covid_2020_comparison_report.md  covid_2020_summary.json  daily_report_failed.md  fetch_manifest.json  finmind_fetch_summary_2026-06-03.json  live_data_check.json  multi_provider_fetch_summary_2026-06-03.json  pipeline_summary.json  production_audit.json  provider_health.json  tdt_rm_v5_1_3_2020_covid_crash_stress.csv  tdt_rm_v5_1_3_2020_covid_crash_summary.json  tdt_rm_v5_1_3_2022_bear_market_backtest.csv  tdt_rm_v5_1_3_2022_bear_market_summary.json  tdt_rm_v5_1_3_2022_performance_report.json  tdt_rm_v5_1_4_2020_covid_crash_summary.json  tdt_rm_v5_1_4_2022_bear_market_backtest.csv  (+3 more)
(+276 files in other folders)
